--- a/HsMagicTheGathering/src/org/hamster/magic/play/controls/containers/PlayerContainer.mxml
+++ b/HsMagicTheGathering/src/org/hamster/magic/play/controls/containers/PlayerContainer.mxml
@@ -22,15 +22,19 @@
 		x="0" y="260" width="100%" height="115"
 		backgroundAlpha="0.5" backgroundColor="#000000">
 		<containers:LifeMagicContainer id="lifeMagicContainer" y="53" />
-		<units:PortraitUnit id="portraitUnit" x="226" y="0" />
+		<units:PortraitUnit id="portraitUnit" x="226" y="0" 
+			source="@Embed(source='/org/hamster/magic/play/assets/test/mouse.jpg')" />
 		<mx:ViewStack id="consoleViewStack" x="341" width="365" height="115">
 			<containers:PlayCardPileContainer id="playCardPileContainer" />
 			<containers:PlayCardCtrlContainer id="playCardCtrlContainer" />
 		</mx:ViewStack>
-		<mx:VBox x="710" width="90" verticalGap="3" paddingTop="2" paddingBottom="2"
+		<mx:VBox id="navBtnContainer" x="710" width="90" 
+			verticalGap="5" paddingTop="6" paddingBottom="2"
 			verticalScrollPolicy="off" horizontalScrollPolicy="off">
-			<buttons:ConsoleNavButton text="牌堆" />
-			<buttons:ConsoleNavButton text="控制" />
+			<buttons:ConsoleNavButton text="牌堆" 
+				click="navBtnCardPileClickHandler(event)" />
+			<buttons:ConsoleNavButton text="控制" 
+				click="navBtnCardCtrlClickHandler(event)" />
 		</mx:VBox>
 	</mx:Canvas>
 	
