--- a/trunk/HsMagicTheGathering/src/org/hamster/magic/play/controls/containers/PlayCardCtrlContainer.mxml
+++ b/trunk/HsMagicTheGathering/src/org/hamster/magic/play/controls/containers/PlayCardCtrlContainer.mxml
@@ -5,4 +5,6 @@
 	<mx:Script source="PlayCardCtrlContainerAs.as" />
 	<buttons:ConsoleTextButton text="横置" x="10" y="7"
 		click="tapCardHandler()"/>
+	<mx:VBox id="actionCtrlContainer" width="365" height="75" y="40"
+		verticalScrollPolicy="off" horizontalScrollPolicy="off" />
 </mx:Canvas>
