--- a/trunk/HsMagicTheGathering/src/org/hamster/magic/configure/ConfigureModule.mxml
+++ b/trunk/HsMagicTheGathering/src/org/hamster/magic/configure/ConfigureModule.mxml
@@ -4,7 +4,6 @@
 	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	creationComplete="completeHandler()"  backgroundColor="white" 
 	xmlns:units="org.hamster.magic.common.controls.units.*"
-	xmlns:units1="org.hamster.magic.play.controls.units.*" 
 	xmlns:unit="org.hamster.magic.configure.controls.unit.*">
 	<mx:Script source="ConfigureModuleAs.as" />
 	<mx:Form width="100%">
@@ -35,7 +34,7 @@
 		<mx:VBox id="cardPropertiesContainer" width="100%" height="100%">
 			<mx:HBox width="100%" horizontalScrollPolicy="off" verticalScrollPolicy="off"
 				verticalAlign="middle" horizontalAlign="center" paddingLeft="5" paddingRight="5">
-				<units1:MagicUnit id="magicUnit" editable="true" />
+				<units:MagicUnit id="magicUnit" editable="true" height="24" />
 				<mx:ComboBox id="cardTypeComboBox" labelField="name" rowCount="6" 
 					change="cardTypeChangeHandler()" />
 				<mx:Button id="saveCardButton" click="saveCard()" enabled="false" label="保存" />
