--- a/trunk/HsMagicTheGathering/src/org/hamster/magic/configure/controls/unit/ActionEditorUnit.mxml
+++ b/trunk/HsMagicTheGathering/src/org/hamster/magic/configure/controls/unit/ActionEditorUnit.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%"
-	horizontalScrollPolicy="off" borderStyle="solid" borderThickness="1" xmlns:units="org.hamster.magic.play.controls.units.*">
+	horizontalScrollPolicy="off" borderStyle="solid" borderThickness="1" xmlns:units="org.hamster.magic.common.controls.units.*">
 	<mx:Script source="ActionEditorUnitAs.as" />
 	
 	<mx:HBox width="100%">
