--- a/trunk/HsMagicTheGathering/src/org/hamster/magic/play/controls/buttons/ConsoleTextButton.mxml
+++ b/trunk/HsMagicTheGathering/src/org/hamster/magic/play/controls/buttons/ConsoleTextButton.mxml
@@ -5,5 +5,6 @@
 	mouseDown="mouseDownHandler()" mouseUp="mouseUpHandler()">
 	<mx:Script source="ConsoleTextButtonAs.as" />
 	<mx:Label id="mainLabel" verticalCenter="0" fontSize="16" color="black" fontWeight="bold"
-		horizontalCenter="0" textAlign="center" width="100%" height="100%"/>
+		horizontalCenter="0" textAlign="center" width="100%" height="100%"
+		text="{text}"/>
 </mx:Canvas>
