--- a/trunk/HsMagicTheGathering/src/org/hamster/magic/play/PlayModule.mxml
+++ b/trunk/HsMagicTheGathering/src/org/hamster/magic/play/PlayModule.mxml
@@ -5,7 +5,8 @@
 	xmlns:containers="org.hamster.magic.play.controls.containers.*" 
 	xmlns:items="org.hamster.magic.play.controls.items.*" 
 	xmlns:units="org.hamster.magic.play.controls.units.*"
-	creationComplete="completeHandler()" xmlns:views="org.hamster.magic.play.controls.views.*">
+	xmlns:views="org.hamster.magic.play.controls.views.*"
+	creationComplete="completeHandler()" >
 	<mx:Script source="PlayModuleAs.as" />
 	<mx:ViewStack id="mainViewStack" width="800" height="600">
 		<views:PrepareView id="prepareView" />
