--- a/HsMagicTheGathering/play/org/hamster/magic/play/controls/containers/PlayerContainer.mxml
+++ b/HsMagicTheGathering/play/org/hamster/magic/play/controls/containers/PlayerContainer.mxml
@@ -16,7 +16,7 @@
 		<containers:PlayCardContainer id="creatureContainer" />
 		<containers:PlayCardContainer id="artifactContainer" />
 		<containers:PlayCardContainer id="landContainer" />
-		<containers:PlayCardContainer id="handContainer" />
+		<containers:PlayCardContainerHand id="handContainer" />
 	</mx:VBox>
 	<mx:Canvas verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		x="0" y="260" width="100%" height="115"
