--- a/trunk/HsMagicTheGathering/play/org/hamster/magic/play/controls/popups/ChooseColorlessPopup.mxml
+++ b/trunk/HsMagicTheGathering/play/org/hamster/magic/play/controls/popups/ChooseColorlessPopup.mxml
@@ -2,10 +2,13 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300"
 	backgroundImage="@Embed(source='/org/hamster/magic/play/assets/popups/choose_colorless_bg.png')"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off">
+	<mx:Metadata>
+		[Event(name="applyClose", type="org.hamster.magic.common.events.PopupEvent")]
+	</mx:Metadata>
 	<mx:Script source="ChooseColorlessPopupAs.as" />
 	<mx:Canvas id="colorlessContainer" width="380" height="36"
 		verticalScrollPolicy="off" horizontalScrollPolicy="off" x="10" y="39"/>
-	<mx:HRule width="380" height="3" y="77" x="10"/>
-	<mx:VBox width="380" x="10" height="208" 
-		verticalScrollPolicy="off" horizontalScrollPolicy="off"  y="82"/>
+	<mx:Canvas id="magicContainer" width="380" x="10" height="218" 
+		verticalScrollPolicy="off" horizontalScrollPolicy="off" y="76"/>
+	<mx:HRule width="380" height="3" y="74" x="10"/>
 </mx:Canvas>
