--- a/HsDropboxAir/src/HsDropboxAirApp.mxml
+++ b/HsDropboxAir/src/HsDropboxAirApp.mxml
@@ -34,15 +34,19 @@
 			</mx:FormItem>
 			<mx:FormItem width="100%" label="/fileops/copy" direction="vertical">
 				<mx:Button label="Copy File" click="postFileopsCopy()"/>
+				<mx:Label id="copyFileLabel" />
 			</mx:FormItem>
 			<mx:FormItem width="100%" label="/fileops/create_folder" direction="vertical">
 				<mx:Button label="Create Folder" click="postCreateFolder()"/>
+				<mx:Label id="createFolderLabel" />
 			</mx:FormItem>
 			<mx:FormItem width="100%" label="/fileops/delete" direction="vertical">
 				<mx:Button label="Delete Folder" click="postDeleteFolder()"/>
+				<mx:Label id="deleteLabel" />
 			</mx:FormItem>
 			<mx:FormItem width="100%" label="/files/" direction="vertical">
 				<mx:Button label="Get File" click="getFile()"/>
+				<mx:Label id="getFileLabel" />
 			</mx:FormItem>
 		</mx:Form>
 	</mx:VBox>
