--- a/HsMagicTheGathering/play/org/hamster/magic/play/controls/popups/ChooseColorlessPopup.mxml
+++ b/HsMagicTheGathering/play/org/hamster/magic/play/controls/popups/ChooseColorlessPopup.mxml
@@ -7,10 +7,8 @@
 		[Event(name="applyClose", type="org.hamster.magic.common.events.PopupEvent")]
 	</mx:Metadata>
 	<mx:Script source="ChooseColorlessPopupAs.as" />
-	<mx:Canvas id="colorlessContainer" width="380" height="36"
-		verticalScrollPolicy="off" horizontalScrollPolicy="off" x="10" y="39"/>
-	<mx:Canvas id="magicContainer" width="380" x="10" height="218" 
-		verticalScrollPolicy="off" horizontalScrollPolicy="off" y="76"/>
+	<mx:Canvas id="mainContainer" width="100%" height="100%" 
+		verticalScrollPolicy="off" horizontalScrollPolicy="off" />
 	<mx:HRule width="380" height="3" y="74" x="10"/>
 	<mx:Canvas id="frontMask" width="100%" height="100%" />
 </mx:Canvas>
