--- a/HsDropboxAir/src/HsDropboxAirApp.mxml
+++ b/HsDropboxAir/src/HsDropboxAirApp.mxml
@@ -32,21 +32,29 @@
 				<mx:Label text="quota-quota  : {accountInfo.quotaInfo_quota}" />
 				<mx:Label text="quota-shared : {accountInfo.quotaInfo_shared}" />
 			</mx:FormItem>
-			<mx:FormItem width="100%" label="/fileops/copy" direction="vertical">
+			<mx:FormItem width="100%" label="/fileops/copy" direction="horizontal">
 				<mx:Button label="Copy File" click="postFileopsCopy()"/>
 				<mx:Label id="copyFileLabel" />
 			</mx:FormItem>
-			<mx:FormItem width="100%" label="/fileops/create_folder" direction="vertical">
+			<mx:FormItem width="100%" label="/fileops/create_folder" direction="horizontal">
 				<mx:Button label="Create Folder" click="postCreateFolder()"/>
 				<mx:Label id="createFolderLabel" />
 			</mx:FormItem>
-			<mx:FormItem width="100%" label="/fileops/delete" direction="vertical">
+			<mx:FormItem width="100%" label="/fileops/delete" direction="horizontal">
 				<mx:Button label="Delete Folder" click="postDeleteFolder()"/>
 				<mx:Label id="deleteLabel" />
 			</mx:FormItem>
-			<mx:FormItem width="100%" label="/files/" direction="vertical">
+			<mx:FormItem width="100%" label="/files/" direction="horizontal">
 				<mx:Button label="Get File" click="getFile()"/>
 				<mx:Label id="getFileLabel" />
+			</mx:FormItem>
+			<mx:FormItem width="100%" label="/files/" direction="horizontal">
+				<mx:Button label="Put File" click="putFile()"/>
+				<mx:Label id="PutFileLabel" />
+			</mx:FormItem>
+			<mx:FormItem width="100%" label="/files/" direction="horizontal">
+				<mx:Button label="Get File Metadata" click="getFileMatadata()"/>
+				<mx:Label id="matadataLabel" />
 			</mx:FormItem>
 		</mx:Form>
 	</mx:VBox>
