--- a/HsMagicTheGathering/configure/org/hamster/magic/configure/controls/unit/TypeLandEditor.mxml
+++ b/HsMagicTheGathering/configure/org/hamster/magic/configure/controls/unit/TypeLandEditor.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100"
-	implements="org.hamster.magic.configure.controls.unit.base.ITypeEditor">
+	implements="org.hamster.magic.configure.controls.unit.base.ITypeEditor"
+	creationComplete="completeHandler()">
 	<mx:Script source="TypeLandEditorAs.as" />
 </mx:Canvas>
