--- a/trunk/HsPhotoList/src/HsPhotoListApp.mxml
+++ b/trunk/HsPhotoList/src/HsPhotoListApp.mxml
@@ -5,19 +5,19 @@
 			    frameRate="60"
 			   applicationComplete="application1_applicationCompleteHandler(event)"
 			   minWidth="955" minHeight="600" xmlns:photoList="org.hamster.components.photoList.*">
-	<photoList:HsPhotoList width="100%" height="300" borderColor="black" borderStyle="solid" click="hsphotolist1_clickHandler(event)">
-		<mx:Canvas id="redItem" backgroundColor="red" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x000000" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x444444" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x666666" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x888888" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0xaaaaaa" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x000000" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x222222" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x444444" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x666666" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0x888888" width="100" height="50" alpha="0.5" />
-		<mx:Canvas backgroundColor="0xaaaaaa" width="100" height="50" alpha="0.5" />
+	<photoList:HsPhotoList width="100%" height="300" x="0" y="0" borderColor="black" borderStyle="solid" click="hsphotolist1_clickHandler(event)">
+		<mx:Canvas id="redItem" backgroundColor="red" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x000000" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x444444" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x666666" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x888888" width="100" height="50" />
+		<mx:Canvas backgroundColor="0xaaaaaa" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x000000" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x222222" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x444444" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x666666" width="100" height="50" />
+		<mx:Canvas backgroundColor="0x888888" width="100" height="50" />
+		<mx:Canvas backgroundColor="0xaaaaaa" width="100" height="50" />
 	</photoList:HsPhotoList>
 	<s:TextArea id="trackingArea" width="100%" height="100%" y="300" />
 	<fx:Declarations>
